--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
-Django==3.2.23
+Django==5.0
 django-robots==6.1
+django-taggit==5.0.1
 Pillow==10.1.0
 pytz==2023.3.post1
 sqlparse==0.4.4
+tzdata==2023.3
