--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
 bleach==6.1.0
 Django==5.0
+django-ranged-response==0.2.0
 django-robots==6.1
+django-simple-captcha==0.6.0
 django-summernote==0.8.20.0
 django-taggit==5.0.1
 Pillow==10.1.0
