--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 bleach==6.1.0
 Django==5.0
+django-multi-captcha-admin==2.0.0
 django-ranged-response==0.2.0
 django-robots==6.1
 django-simple-captcha==0.6.0
